@@ -1,3 +1,13 @@
+2010-06-03  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* valprint.h (get_array_bounds): Change low and high parameter types
+	to LONGEST *.
+	* valprint.c (get_array_bounds): Use get_discrete_bounds call to 
+	compute bounds.
+	(val_print_array_elements): Adapt to change above.
+	* ada-valprint.c (print_optional_low_bound): Adapt to change above.
+	* p-valprint.c (pascal_val_print): Likewise.
+
 2010-06-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* symfile.c (init_filename_language_table): New extensions .for, .FOR,
